firefighting is cool

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
   <title>Joseph Bull's Portfolio Page</title>
   <link rel="icon" type="image/png" href="images/favicon.png" />
+  <link rel="stylesheet" href="css/custom.css">
+  <script src="js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body> <div class="card m-2" style="width: 20rem;">
+    <img src="images/profilepic.jpg" class="card-img-top" alt="My profile picture">
+    <div class="card-body">
+      <h5 class="card-title">About Me</h5>
+      <p class="card-text">Your About Me information</p>
+    </div>
+</div>
 </h2> Joseph Bull -bulljo@oregonstate.edu </h2>
 </h2> Bio/about Section </h2>
 <p> 
