--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/custom.css">
   <script src="js/bootstrap.bundle.min.js"></script>
 </head>
-<body> <div class="card m-2" style="width: 20rem;">
+<body class="bg-primary"> <div class="card m-2" style="width: 20rem;">
     <img src="images/profilepic.jpg" class="card-img-top" alt="My profile picture">
     <div class="card-body">
       <h5 class="card-title">About Me</h5>
