--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+        <img src="/images/Fish.jpeg"class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+        <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg> -->
 
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
+            <h1>Bio.</h1>
             <p> Hi, My name is Joseph Bull. I am 22 years old currently trying to get my undergraduate degree in Computer Science. I originally was a wildland firefighter for the State of California. In high School I was a part of my local Fire Explorer program sophomore year of high school until I turned 20 years old. I enjoy playing video games, going hiking, and being outdoors.  These skills of teamwork,adaptability, and communication led me to the person I am today.
             </p></p>
             <p><a class="btn btn-lg btn-primary" href="#"></a></p>
@@ -83,7 +84,7 @@
 
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
+            <h1>Bruce Wayne</h1>
             <p>Second Slide..</p>
             <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
           </div>
@@ -123,22 +124,22 @@
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-        <h2>About Me</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+        <h2>Documented Source Code</h2>
+        <p> I have a github and LeetCode profile that has the documentation of my progress.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-        <h2>Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+        <h2>Relevant Experience</h2>
+        <p>Currently Taking Engineering 100 class.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-        <h2>Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
+        <h2>Relevant Skills</h2>
+        <p>-Teamwork. I gained by working on a handcrew in California -Adaptability. If things went south on the line you had to adapt to it quickly and calmly. -Efficiency. I had to get certain tasks done in a certain amount of time. -Accountability. The entire crew had to be accountable to oneself and others.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
@@ -151,7 +152,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">About Me. <span class="text-muted"></span></h2>
-        <p class="lead">Joseph Bull -bulljo@oregonstate.edu Bio/about Section
+        <p class="lead"> -bulljo@oregonstate.edu Bio/about Section
           Hi, My name is Joseph Bull. I am 22 years old currently trying to get my undergraduate degree in Computer Science. I originally was a wildland firefighter for the State of California. In high School I was a part of my local Fire Explorer program sophomore year of high school until I turned 20 years old. I enjoy playing video games, going hiking, and being outdoors. These skills of teamwork,adaptability, and communication led me to the person I am today..</p>
       </div>
       <div class="col-md-5">
@@ -164,7 +165,7 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Some Things I enjoy doing. <span class="text-muted">See for yourself.</span></h2>
+        <h2 class="featurette-heading">Some Things I enjoy doing. <span class="text-muted">.</span></h2>
         <p class="lead">Some of the things I enjoy doing are hiking and exploring the outdoors.</p>
       </div>
       <div class="col-md-5 order-md-1">
@@ -178,7 +179,7 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Relevant Experience <span class="text-muted">Checkmate.</span></h2>
+        <h2 class="featurette-heading">Relevant Experience <span class="text-muted">.</span></h2>
         <p class="lead">I have some coding experience in C++,Python, HTML, and making websites.</p>
       </div>
       <div class="col-md-5">
