added new Things

--- a/index.html
+++ b/index.html
@@ -86,14 +86,15 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>Bruce Wayne</h1>
-            <p>Second Slide..</p>
+            <p>This is my dog Bruce Wayne. He really likes to fetch.</p>
             <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+        <img src="/images/OceanView.jpeg"class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+        <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg> -->
         <div class="container">
           <div class="carousel-caption text-end">
             <h1>Things I like Doing</h1>
