added some things

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Bio.</h1>
-            <p> Hi, My name is Joseph Bull. I am 22 years old currently trying to get my undergraduate degree in Computer Science. I originally was a wildland firefighter for the State of California. In high School I was a part of my local Fire Explorer program sophomore year of high school until I turned 20 years old. I enjoy playing video games, going hiking, and being outdoors.  These skills of teamwork,adaptability, and communication led me to the person I am today.
+            <h1>An Aquarium.</h1>
+            <p> I went and visited the Aquarium Newport,Oregon <p></p>
             </p></p>
             <p><a class="btn btn-lg btn-primary" href="#"></a></p>
           </div>
@@ -154,12 +154,13 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">About Me. <span class="text-muted"></span></h2>
-        <p class="lead"> -bulljo@oregonstate.edu Bio/about Section
+        <p class="lead"> -bulljo@oregonstate.edu 
           Hi, My name is Joseph Bull. I am 22 years old currently trying to get my undergraduate degree in Computer Science. I originally was a wildland firefighter for the State of California. In high School I was a part of my local Fire Explorer program sophomore year of high school until I turned 20 years old. I enjoy playing video games, going hiking, and being outdoors. These skills of teamwork,adaptability, and communication led me to the person I am today..</p>
       </div>
       <div class="col-md-5">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img src="/images/Joseph.jpeg"class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+      <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg> -->
       </div>
     </div>
 
